# tradinghub

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/tradenest-api/[...path]/: route.ts
dashboard/components/: ui.tsx
dashboard/lib/: api.ts
docs/: cloudflare-tradingview-setup.md  operations-checklist.md  runbook.md
ops/launchd/: tradenest-backend.plist  tradenest-cloudflared.plist  tradenest-dashboard.plist
ops/scripts/: backup_sqlite.sh  healthcheck.sh  rotate_logs.sh  run-backend.sh  run-cloudflared.sh  run-dashboard.sh  test_all.sh  validate_env.sh
tests/: conftest.py  test_auth.py  test_dashboard_api.py  test_integration_app.py  test_paper_broker.py  test_pipeline.py  test_replay.py  test_telegram_service.py  test_webhook.py
tradenest/: __init__.py  api.py  auth.py  config.py  db.py  main.py  pipeline.py  schemas.py  webhook.py
tradenest/replay/: __init__.py  cli.py  runner.py  sample_signals.csv
tradenest/services/: __init__.py  paper_orders.py  price_feed.py  scheduler.py  telegram_service.py
tradenest/stages/: __init__.py  base.py  market_features.py  paper_broker.py  risk_gate.py  signal_engine.py
