[project]
name = "tradenest"
version = "0.1.0"
description = "Local paper-trading signal cockpit webhook foundation."
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.10,<4.0",
    "fastapi>=0.110,<1.0",
    "pydantic>=2.6,<3.0",
    "uvicorn[standard]>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
